Fix checklist sidebar overflow issue

--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,9 @@
     text-align: left;
     backdrop-filter: blur(100px);
     transition: 0.2s;
+    max-height: calc(100% - 135px);
+    overflow-y: auto;
+    overflow-x: clip;
 }
 
 .scrollContainer {
@@ -162,6 +165,26 @@ button:active {
     margin-top: 10px;
     margin-bottom: 10px;
     transition: 0.2s;
+}
+
+.checklistMenuOption_LAST {
+    width: calc(40vw - 30px);
+    color: white;
+    position: relative;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    transition: 0.2s;
+}
+
+.checklistMenuOption_LAST:hover {
+    cursor: pointer;
+    background-color: rgba(7, 17, 62, 1);
+    box-shadow: 0px 0px 15px 1px rgba(91, 45, 255, 0.9);
+    transform: scale(101%);
 }
 
 .checklistMenuOption:hover {
@@ -338,4 +361,8 @@ a {
 
 .account_textbox {
     width: calc(100% - 15px);
+}
+
+.menuOptionsContainer {
+    padding-bottom: 5px;
 }
